fixed issue where typed text on search field would appear behind search icon

--- a/client/src/components/InputTextField/InputTextField.css
+++ b/client/src/components/InputTextField/InputTextField.css
@@ -30,7 +30,7 @@
   background-color: var(--white);
   border: 2px solid var(--white);
   border-radius: 3px;
-  padding: 15px 30px 15px 30px;
+  padding: 1rem 3rem 1rem 4rem;
   min-width: 300px;
   max-width: 400px;
   width: 100%;
@@ -46,5 +46,5 @@
 
 .InputTextField__container--search::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  padding-left: 40px;
+  padding-left: 0rem;
 }
